<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoundActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/textViewTitle"
        android:textColor="@color/darkgreen"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5Animals"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/grell"
        android:text="@string/button5Animals"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/button10Predators"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/red"
        android:text="@string/button10Predators"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button10Animals"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button20Predators"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/red"
        android:text="@string/button20Predators"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button20Animals"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button10Animals"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/grell"
        android:text="@string/button10Animals"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button5Predators" />

    <Button
        android:id="@+id/button20Animals"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/grell"
        android:text="@string/button20Animals"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button10Predators" />

    <Button
        android:id="@+id/button5Predators"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/red"
        android:text="@string/button5Predators"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button5Animals" />

</androidx.constraintlayout.widget.ConstraintLayout>
